Added Contact Form, works well and looks nice.
Next need to complete Contact section containing contact info.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  
+  box-sizing: border-box;
+}
+
+
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
@@ -113,24 +122,20 @@ a:hover {
   width: 100%;
   border-radius: 5px;
 }
-
-
-
 #boxlogo img{
   height: 50px;
   position: relative;
   right: 46px;
   top: -15px;
 }
-
-
-
 .image1 img{
   width: 400px;
   height: 400px;
   border: 2px black solid;
   border-radius: 5px;
 }
+
+
 
 #section2 {
   background-image: url(img/ca-bg2.png);
@@ -229,6 +234,9 @@ a:hover {
   background-color: #336666;
   border: 1px white solid;
 }
+
+
+
 #section4 {
   margin: 0;
   padding: 0;
@@ -246,99 +254,125 @@ a:hover {
 
 #section5 {
   background-color: #336666;
+  height: 100%;
   width: 100%;
   background-image: url(img/ca-bg3.png);
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size: contain;
   padding-top: 40px;
-  overflow: hidden;
 }
 
 #section5 h1 {
+  padding-top: 50px;
   text-align: center;
-  font-size: 50px;
+  font-size: 75px;
   font-family: 'Playfair Display', serif;
   letter-spacing: 10px;
   color: #F2955E;
 }
 
-
 .contactcontainer {
-  margin: 15px;
-}
-/* .leftcontainer {
-  background-color: grey;
-  border: 1px red solid;
-  grid-column-start: span 1;
-  border-radius: 10px;
-} */
-.rightcontainer {
-  background-color: #F2955E;
-  border: 1px red solid;
-  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.rightcontainer form {
-  background-color: #F2955E;
-  width: 100%;
-  gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 50px 50px 50px 150px;
-  display: grid;
-  height: 1000px;
-
-
-}
-
-
-
-#useremail {
-  grid-column: 1;
-  grid-row: 1;
-}
-#useremail input {
-  width: 100%;
-  max-width: 400px;
-}
-
-#username {
-  grid-column: 1;
-  grid-row: 2;
-}
-#username input {
-  width: 100%;
-  max-width: 400px;
-}
-
-#subject {
-  grid-column: 1;
-  grid-row: 3;
-}
-#subject input {
-  width: 100%;
-  max-width: 400px;
-}
-
-#body {
-  grid-column: span 2;
-  grid-row: 4;
-  outline: 1px red solid;
-}
-#body input {
+form{
   width: 95%;
-  height: 80%;
+  max-width: 600px;
 }
 
-
-
-#submit {
-  grid-column: 2;
-  grid-row: 1 / 4;
-  width: 92%;
-  max-width: 400px;
+.input-group{
+  margin-bottom: 30px;
+  position: relative;
 }
 
-.contactcontainer img {
+input, textarea{
   width: 100%;
+  padding: 25px;
+  outline: 0;
+  border: 3px solid white;
+  color: #fff;
+  background: transparent;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+label{
   height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  color: #fff;
+  cursor: text;
+  transition: .2s;
+}
+button{
+  padding: 30px 0;
+  font-weight: bolder;
+  font-size: larger;
+  outline: none;
+  border: 1px solid #F2955E;
+  width: 100%;
+  cursor: pointer;
+  background-color: #F2955E;
+  color: black;
+  letter-spacing: 2px;
+  box-shadow: 5px 5px 5px #BF6341;
+  border-radius: 30px;
+}
+button:hover{
+  color: white;
+  box-shadow: 5px 5px 5px white;
+}
+
+input:focus~label,
+input:valid~label,
+textarea:focus~label,
+textarea:valid~label{
+  top: -35px;
+  font-size: 14px;
+  color: #F2955E;
+}
+
+.row{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+.contactcard {
+  /* background-image: url(img/ca-bg2.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center; */
+  margin-top: 50px;
+  width: 90%;
+  height: 300px;
+  max-width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contactcard img {
+  width: 175px;
+}
+.contactinfo{
+  display: flex;
+  flex-direction: column;
+
+}
+.contactinfo h4{
+  font-size: 1.5vh;
+  margin-top:20px;
+  color: black;
+}
+
+footer{
+  display: flex;
+  justify-content: space-around;
 }
