--- a/style.css
+++ b/style.css
@@ -135,164 +135,113 @@ a:hover {
   grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
   grid-template-rows: repeat(15, 100px);
 }
-
-
 .gallerycontainer div {
   margin: 10px;
   box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.4);
 }
-
 .gallerycontainer img {
   width: 100%;
   height: 100%;
 }
-#pueblo {
+
+.hovereffect {
+  position: relative;
+  overflow: hidden;
+}
+.hovereffect > .content {
+  margin: -10px;
+  text-align: center;
+  position: absolute;
+  inset: 0;
+  font-size: 20px;
+  background-color: rgba(255, 255, 255, 0.4);
   display: flex;
-  justify-content: center;
-  flex-direction: column;
   align-items: center;
-  color: black;
+  justify-content: center;
+}
+.hovereffect > img,
+.hovereffect > .content {
+  transition: 300ms ease-in-out;
+}
+.hovereffect:hover > .content.fade {
+  opacity: 0;
+}
+.hovereffect > .content.fade {
+  opacity: 0;
+}
+.hovereffect:hover > .content.fade {
+  opacity: 1;
+}
+.hovereffect:hover > img.blur {
+  filter: blur(5px);
+}
+
+#pueblo {
   grid-column: span 2;
   grid-row: span 2;
 }
 #quail {
   min-width: 170px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #owl {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #pueblo-alt {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: black;
+  min-width: 350px;
   grid-column: span 4;
   grid-row: span 4;
 }
 #ivyframe {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
-/* #gallerylogo {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: black;
-  grid-column: span 2;
-  grid-row: span 2;
-} */
 #copper-sheet-mirror {
-  grid-row: span 2;
-  grid-column: span 2;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 6;
   grid-row: span 5;
 }
 #ivypoll {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 6;
   grid-row: span 8;
 }
-
 #coatrackinaction {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  color: black;
   grid-column: span 4;
   grid-row: span 6;
 }
 #quail-only {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #dragonfly {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #vine {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #vinewhiteframe {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #coatrack {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
 #pricklypear {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  color: black;
   grid-column: span 2;
   grid-row: span 2;
 }
+
+
+
+
+
+
+
+
 
 
 #section4 {
@@ -310,6 +259,9 @@ a:hover {
 
 
 
+
+
+
 #section5 {
   background-color: #336666;
   height: 100%;
@@ -319,7 +271,6 @@ a:hover {
   background-size: contain;
   padding-top: 40px;
 }
-
 #section5 h1 {
   text-align: center;
   font-size: 75px;
@@ -327,7 +278,6 @@ a:hover {
   letter-spacing: 10px;
   color: #F2955E;
 }
-
 .contactcontainer {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -335,17 +285,14 @@ a:hover {
   flex-direction: column;
   align-items: center;
 }
-
 form{
   width: 95%;
   max-width: 600px;
 }
-
 .input-group{
   margin-bottom: 30px;
   position: relative;
 }
-
 input, textarea{
   width: 100%;
   padding: 15px;
@@ -355,7 +302,6 @@ input, textarea{
   font-size: 15px;
   border-radius: 10px;
 }
-
 label{
   height: 100%;
   position: absolute;
@@ -366,9 +312,6 @@ label{
   cursor: text;
   transition: .2s;
 }
-
-
-
 button {
   padding: 30px 0;
   outline: none;
@@ -393,18 +336,15 @@ button {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
-
 button:hover {
   background-position: right center;
   /* change the direction of the change here */
   color: white;
   text-decoration: none;
 }
-
 button:active {
   transform: scale(0.95);
 }
-
 input:focus~label,
 input:valid~label,
 textarea:focus~label,
@@ -412,14 +352,11 @@ textarea:valid~label{
   top: -35px;
   font-size: 14px;
 }
-
 .row{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
-
 .contactcard {
   background-image: url(img/contact-card-ca-bg2.png);
   linear-gradient(45deg, blue, red);
@@ -448,6 +385,10 @@ textarea:valid~label{
   color: #D9D4CC;
   letter-spacing: 2px;
 }
+
+
+
+
 
 footer{
   display: flex;
