--- a/style.css
+++ b/style.css
@@ -723,9 +723,7 @@ footer{
   padding-top: 40px;
   width: 100%;
   background-color: #D9D4CC;
-  background-image: url(/img/ca-bg-clear.png);
-  background-repeat: no-repeat;
-  background-size: contain;
+
 }
 
 #section3 h1 {
@@ -756,14 +754,12 @@ footer{
 
 #section4 {
   padding-top: 40px;
-  height: 1080px;
   background-color: #F2955E;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 #section4 h1 {
   text-align: center;
 }
@@ -773,24 +769,68 @@ footer{
 #section4 h3 {
   text-align: center;
 }
+.mission {
+  padding-top: 50px;
+  text-align: center;
+  width: 90%;
+  color: black;
+}
+
 
 .kurtintro {
-  margin-right: 10px;
-  margin-left: 10px;
+  padding-top: 60px;
   width: 80%;
-  padding-top: 20px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
 }
-
-.kurtintro img {
+.intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80%;
+}
+.intro img {
+  padding-top: 10px;
   width: 100%;
+  max-width: 700px;
+  height: 80%;
+  max-height: 400px;
+}
+.intro span {
+  text-align: center;
 }
 
-
-
+.began {
+  padding-right: 20px;
+  padding-left: 20px;
+  width: 100%;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.began span {
+  padding-bottom: 20px;
+}
+.chimney {
+  width: 100%;
+  max-width: 700px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.chimney img {
+  padding-bottom: 5px;
+  width: 80%;
+  width: 300px;
+  padding: 20px;
+}
+.chimney span {
+  width: 400px;
+  padding: 2px;
+  font-weight: bold;
+}
 
 
 #section5 {
